--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <title>rocco</title>
   </head>
   <body>
-    <div id="root" data-theme="fantasy"></div>
+    <div id="root" data-theme="luxury"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
