--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -7,7 +7,7 @@
     <title>rocco</title>
   </head>
   <body>
-    <div id="root" data-theme="luxury" style="height: 100%; width: 100%"></div>
+    <div id="root" data-theme="winter" style="height: 100%; width: 100%"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
