feat(apps/web): tanstack router

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="your favorite places.">
     <meta name="theme-color" content="#ffffff">
-    <link rel="icon" href="/public/favicons/favicon.ico">
-    <link rel="apple-touch-icon" href="/public/favicons/apple-touch-icon-152x152.png" sizes="152x152">
+    <link rel="icon" href="/favicons/favicon.ico">
+    <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-152x152.png" sizes="152x152">
     <title>rocco</title>
   </head>
   <body>
